# benchmarks

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt
benchmark/: cli.py  google_sheet_benchmarks.py
benchmark/model/: benchmark.py
comparator/: cli.py
comparator/engines/: nameres.py  sapbert.py
engines/: nameres.py  sapbert.py
src/benchmarks/: comparator.py
