[project]
name = "benchmarks"
version = "0.1.0"
description = "Benchmarks for comparing NER tools."
authors = [
    {name = "Gaurav Vaidya", email = "gaurav@renci.org"},
]
dependencies = [
    "click",
    "pytest",
    "black",
    "requests>=2.31.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
comparator = {call = "comparator.cli:comparator"}
benchmark = {call = "benchmark.cli:benchmark"}

[projects.scripts]
comparator = "comparator:cli.comparator"
benchmark = "benchmark:cli.benchmark"

[tool.pdm]
distribution = false
